--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -38,8 +38,8 @@
     },
     "subtitle": "Join the Czech game development community at our meetups in {prague} and {zlin} for talks and networking.",
     "cta": {
-      "events": "Upcoming Events",
-      "recordings": "Watch Recordings"
+      "events": "Join the next meetup",
+      "recordings": "Talk Recordings"
     },
     "stats": {
       "locations": "Locations",
@@ -65,7 +65,7 @@
     "recordings": {
       "title": "Trending Talks",
       "subtitle": "The most popular recordings from our community.",
-      "viewAll": "View all recordings",
+      "viewAll": "Talk Recordings",
       "empty": "No recordings found for this location.",
       "filter": {
         "all": "All",
@@ -326,23 +326,56 @@
         "name": "{prague}",
         "tagline": "Where it all started.",
         "members": [
-          { "name": "Jan Hrušovský", "role": "moderator" },
-          { "name": "Michael Petr", "role": "recording" },
-          { "name": "Jakub Hubáček", "role": "photography" },
-          { "name": "Hedvika Jandová", "role": "operations" },
-          { "name": "Ondřej Purchart", "role": "video, audio" },
-          { "name": "Pavel Pilař", "role": "operations, bodyguard" },
-          { "name": "Matouš Márai", "role": "operations" }
+          {
+            "name": "Jan Hrušovský",
+            "role": "moderator"
+          },
+          {
+            "name": "Michael Petr",
+            "role": "recording"
+          },
+          {
+            "name": "Jakub Hubáček",
+            "role": "photography"
+          },
+          {
+            "name": "Hedvika Jandová",
+            "role": "operations"
+          },
+          {
+            "name": "Ondřej Purchart",
+            "role": "video, audio"
+          },
+          {
+            "name": "Pavel Pilař",
+            "role": "operations, bodyguard"
+          },
+          {
+            "name": "Matouš Márai",
+            "role": "operations"
+          }
         ]
       },
       {
         "name": "{zlin}",
         "tagline": "Moravian heart, students' pulse.",
         "members": [
-          { "name": "Michael Petr", "role": "recording" },
-          { "name": "Pavel Novák", "role": "operations" },
-          { "name": "Jitka Honsová", "role": "operations, venue" },
-          { "name": "Michal Ščuglík", "role": "operations" }
+          {
+            "name": "Michael Petr",
+            "role": "recording"
+          },
+          {
+            "name": "Pavel Novák",
+            "role": "operations"
+          },
+          {
+            "name": "Jitka Honsová",
+            "role": "operations, venue"
+          },
+          {
+            "name": "Michal Ščuglík",
+            "role": "operations"
+          }
         ]
       }
     ],
@@ -729,7 +762,7 @@
     "eyebrow": "Welcome",
     "brand": "{brandName}",
     "title": "Sign in to Bonfire",
-    "subtitle": "We will send a one-time code to confirm your address.",
+    "subtitle": "No password. Code arrives in 10 seconds.",
     "secureTitle": "No password needed",
     "secureBody": "We'll send a code to your email. Quick, simple, and secure.",
     "steps": {
@@ -740,7 +773,7 @@
       "step5": "Welcome"
     },
     "codeHint": "Enter the 6-digit code we sent to your inbox.",
-    "noRegistrationHint": "New here? Your first login creates your account.",
+    "noRegistrationHint": "Simple flow: email → OTP code → you're signed in and registered.",
     "emailLabel": "Email",
     "emailPlaceholder": "lara@croft.com",
     "codeLabel": "Code",
